# idmd

./: .readthedocs.yaml  README.md  example.py  example_app.ipynb  example_app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: publish-to-testpypi.yml
.github/workflows/: publish-to-testpypi.yml  run-tests.yml
docs/: Api.rst  Features.rst  Installation.rst  License.rst  Modules.rst  Usage.rst  api.rst  conf.py  index.rst  modules.rst  requirements.txt
experiments/Streamlit/: Test.py  Teszt.xlsx
experiments/dash/: test.py
idmd/: __init__.py  app.py  example.py
idmd/data/: export.py  exporter.py  generator.py  loader.py  uploader.py
idmd/manipulation/: columns.py  replace.py
idmd/report/: report.py
idmd/ui/: base.py  column_manipulator.py  columns_ui.py  data_preview.py  data_stats.py  exporter_ui.py  generator_ui.py  replace_ui.py  report_ui.py  uploader_generator_ui.py  uploader_ui.py  visualizer_ui.py
idmd/visualization/: __init__.py  heatmaps.py  histograms.py  plots.py  visualizer.py
idmd/viz/: visualizer.py
tests/test_data/: test_exporter.py  test_generator.py  test_uploader.py
tests/test_manipulation/: test_columns.py  test_replace.py
tests/test_ui/: test_base.py  test_data_preview.py
tests/test_visualization/: test_heatmaps.py  test_histograms.py  test_plots.py  test_visualizer.py
